# StormFramework2

./: .gitignore  CMakeLists.txt  Makefile  NekiKaoTodo  README.MD  gmon.out  main.cpp  makeGen  profile.txt  test_file1.lua  test_file2.lua
OldStuffAndReferences/: ActualSDLKeysMap  DGMisc.h  DebugPlaneRendering.cpp  MainRefBackup.cpp  MainRerBackup2.cpp  NekiKaoTodo  PointInPlane.cpp  SWidgetComStaticTexture.cpp  StormRenderBatch.cpp  StormRenderBatch.h  StormRenderCommand.cpp  StormRenderCommand.h  StormSceneElement.cpp  StormSceneElement.h  bar.sh  glPrimitiveRestartIndex DOC
QtEditor/: .gitignore
QtEditor/StormFrameworkEditor/: SNumberLineEdit.cpp  SNumberLineEdit.h  SResourceLineEdit.cpp  SResourceLineEdit.h  SWidgetComponent.cpp  SWidgetComponent.h  SWidgetProperty.cpp  SWidgetProperty.h  SceneObjectTreeWidgetItem.cpp  SceneObjectTreeWidgetItem.h  SceneObjectsTreeWidget.cpp  SceneObjectsTreeWidget.h  StormFrameworkEditor.pro  StormObjComPropertyWidget.cpp  StormObjComPropertyWidget.h  StormObjComponentWidget.cpp  StormObjComponentWidget.h  StormOpenGlWidget.cpp  StormOpenGlWidget.h  StormQtHelperFunctions.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  selectprefab.cpp  selectprefab.h  selectprefab.ui  stormglwidget.cpp  stormglwidget.h
QtEditor/StormFrameworkEditor/componentWidgets/: SWidgetComDefault.cpp  SWidgetComDefault.h  SWidgetComPlane.cpp  SWidgetComPlane.h  SWidgetComScript.cpp  SWidgetComScript.h  SWidgetComStaticTexture.cpp  SWidgetComStaticTexture.h  SWidgetComTransform.cpp  SWidgetComTransform.h  StormObjComPlane.cpp  StormObjComPlane.h
QtEditor/StormFrameworkEditor/propertyWidgets/: SWidgetPropertyBoolean.cpp  SWidgetPropertyBoolean.h  SWidgetPropertyColor.cpp  SWidgetPropertyColor.h  SWidgetPropertyFloat.cpp  SWidgetPropertyFloat.h  SWidgetPropertyResource.cpp  SWidgetPropertyResource.h  SWidgetPropertyVec2.cpp  SWidgetPropertyVec2.h  StormPropertyVec2Widget.cpp  StormPropertyVec2Widget.h
QtEditor/build-StormFrameworkEditor-Desktop_Qt_5_9_0_GCC_64bit-Debug/: Makefile  moc_mainwindow.cpp  ui_mainwindow.h
cmake/: CMakeLibsSettings.cmake
data/: color.fs  color.vs  test_lion_sheet.xml  the_script.lua  the_script2.lua  the_script3.lua
data/lua_common/: lua_common.lua  object_handler.lua
data/scenes/: the_scene.xml  the_scene_1.xml
libs/Box2D/: CMakeLists.txt
libs/Box2D/Collision/Shapes/: b2PolygonShape.cpp  b2PolygonShape.h
libs/Box2D/Common/: b2Math.h
libs/Box2D/Dynamics/: b2Body.cpp
libs/easyloggingpp/: easylogging++.cpp  easylogging++.h
libs/imgui/: imgui.cpp  imgui_draw.cpp
projects/linux/: CMakeLists.txt
src/: CMakeLists.txt  SEngineModuleFactory.cpp  SEngineModuleFactory.h  SGlobalNotifier.cpp  SGlobalNotifier.h  STextureManager.cpp  STextureManager.h  StormDebug.cpp  StormDebug.h  StormEngine.cpp  StormEngine.h  StormEngineEditing.cpp  StormEngineEditing.h  StormTextureManager.cpp  StormTextureManager.h
src/core/: CMakeLists.txt  StormCommon.h  StormModuleBase.h
src/core/graphics/: CMakeLists.txt  StormRenderer.cpp  StormRenderer.h  StormShader.cpp  StormShader.h  StormTexture.cpp  StormTexture.h  StormVideoDriver.cpp  StormVideoDriver.h
src/core/resources/: CMakeLists.txt  StormFileSystem.cpp  StormFileSystem.h  StormResourceFile.cpp  StormResourceFile.h
src/core/utils/: CMakeLists.txt  Geometry.cpp  Geometry.h  Plane.cpp  Plane.h  SEventDispatcher.h  SEventListener.h  SNotificationCenter.h  SObservable.h  StormIntrusivePtr.h  StormMiscTools.cpp  StormMiscTools.h  StormObjectPool.h  StormRefCounter.h  StormVertex.h
src/lua/: SLuaBindings.cpp  SLuaSystem.cpp  SLuaSystem.h
src/scene/: CMakeLists.txt  SSComponentEvents.h  SScene.cpp  SScene.h  SSceneComponent.cpp  SSceneComponent.h  SSceneComponentSystem.cpp  SSceneComponentSystem.h  SSceneManager.cpp  SSceneManager.h  SSceneObject.cpp  SSceneObject.h  SSceneObjectEventTypes.h  SSceneObjectFlags.h  SSceneObjectTransform.cpp  SSceneObjectTransform.h  StormScene.cpp  StormScene.h  StormSceneObject.cpp  StormSceneObject.h
src/scene/components/: CMakeLists.txt  SSceneComCollider.cpp  SSceneComCollider.h  SSceneComLuaScript.cpp  SSceneComLuaScript.h  SSceneComPhysics.cpp  SSceneComPhysics.h  SSceneComPlane.cpp  SSceneComPlane.h  SSceneComSprite.cpp  SSceneComSprite.h  SSceneComStaticTexture.cpp  SSceneComStaticTexture.h  SSceneComTransform.cpp  SSceneComTransform.h  SSceneSystemCollider.cpp  SSceneSystemCollider.h  SSceneSystemLuaScript.cpp  (+11 more)
src_editor/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  StormEngineEditing.cpp  StormEngineEditing.h  colorswatch.cpp  colorswatch.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  toolbar.cpp  toolbar.h
src_editor/component_widgets/: SEComponentWidget.cpp  SEComponentWidget.h  SERootComponentWidget.cpp  SERootComponentWidget.h
src_editor/dock_widgets/: SEDockWidget.cpp  SEDockWidget.h
src_editor/docks/: SEDockWidget.cpp  SEDockWidget.h
src_editor/docks/debug_settings/: SEDockDebugSettings.cpp  SEDockDebugSettings.h
src_editor/docks/main_editor/: SEMainEditorDock.cpp  SEMainEditorDock.h  SEStormMainWidget.cpp  SEStormMainWidget.h
src_editor/docks/object_components/: SEDockObjectComponents.cpp  SEDockObjectComponents.h
src_editor/docks/object_hierarchy/: SEDockObjectHierarchy.cpp  SEDockObjectHierarchy.h  SEObjectsTreeWidget.cpp  SEObjectsTreeWidget.h  SESceneObjectTreeItem.cpp  SESceneObjectTreeItem.h
src_editor/property_widgets/: SEPropertyNumber.cpp  SEPropertyNumber.h  SEPropertyVector2.cpp  SEPropertyVector2.h  SEPropertyWidget.cpp  SEPropertyWidget.h
src_editor/property_widgets/elements/: SENumberLineEdit.cpp  SENumberLineEdit.h
src_editor/scene_editing/lua_script/: SESystemLuaScript.cpp  SESystemLuaScript.h
src_editor/scene_editing/transform/: SESystemLuaScript.cpp  SESystemLuaScript.h  SESystemTransform.cpp  SESystemTransform.h
src_editor/toolbars/: SEFileToolbar.cpp  SEFileToolbar.h  SEOptionsToolbar.cpp  SEOptionsToolbar.h  SEToolbar.cpp  SEToolbar.h  SEToolbarsCommon.cpp  SEToolbarsCommon.h  SEToolsToolbar.cpp  SEToolsToolbar.h  SFEditToolbar.cpp  SFEditToolbar.h
(+46 files in other folders)
